--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nyelvtanuló kártyák</title>
-    <link rel="stylesheet" href="lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./lib/bootstrap-4.5.0-dist/css/bootstrap.min.css">   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/popper.min.js"></script>
-    <script src="lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
+    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="./lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html"></a>
+        <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent">
             <!--aria-expanded="false" aria-label="Toggle navigation"-->
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Főoldal <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Főoldal <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="nyelvek.html">Nyelvek </a>
+                    <a class="nav-link" href="./nyelvek.html">Nyelvek </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="temakorok.html">Témakörök </a>
+                    <a class="nav-link" href="./temakorok.html">Témakörök </a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -39,60 +39,64 @@
                         Kártyák
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Hozzáadás</a>
+                        <a class="dropdown-item" href="./hozzaadas.html">Hozzáadás</a>
                         <a class="dropdown-item" href="#">Törlés</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="listak.html">Listák</a>
+                    <a class="nav-link" href="./listak.html">Listák</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tesztek</a>
+                    <a class="nav-link" href="./teszt1.html">Tesztek</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="keresés" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></i></button>
             </form>
         </div>
     </nav>
 
     <div class="container">
         <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-                <div class="card" style="width: 30rem;">
-                    <div class="card-body">
-                        <h3 class="card-title">Good morning!</h3>
-                        <h5 class="card-subtitle mb-2 text-muted">Angol</h5>
-                        <h3 class="card-title2">Jó napot!</h3>
-                        <h5 class="card-subtitle2 mb-2 text-muted">Magyar</h5>
-                        <h6 class="card-subtitle3 mb-2 text-muted" id="tema">Témakör: Bemutatkozás</h6>
-                        
-                        <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p> -->
-                        <!-- <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a> -->
-                    </div>
+            <div class="col-3">
+                <div class="title1">
+                    <h6>A nyelvtanuló kártyákkal gyorsan és könnyedén lehet tanulni különböző nyelveket, saját, egyéni tempóban haladva.</h6>                   
+                </div>
+                <div class="title2">
+                    <h6>A kártyák segítségével könnyebbé és egyszerűbbé válik a nyelvtanulás, ugyanis a kártyák lapozgatásával, egyesével tudjuk memorizálni és begyakorolni a szavakat, kifejezéseket.</h6>
                 </div>
             </div>
-            <div class="col-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-                <button id="elozoBtn" class="btn btn-light">
-                    Előző kártya
-                </button>
-                <button id="kovetkezoBtn" class="btn btn-light">
-                    Következő kártya
-                </button>
+            <div class="col-6">
+                <div class="index-title">
+                    <h3>Nyelvtanuló kártyák</h3>
+                </div>
+                <div class="card" style="width: 30rem;">
+                    <div id="cardBody" class="card-body">
+                        <h6 id="card-id">1</h6>
+                        <h4 id="cardTitle" class="card-title">Good Night!</h4>
+                        <h6 id="subtitle1" class="card-subtitle mb-2 text-muted">Angol</h6>
+                        <h4 id="cardTitle2" class="card-title2">Jó éjszakát!</h4>
+                        <h6 id="subtitle2" class="card-subtitle2 mb-2 text-muted">Magyar</h6>
+                        <h6 class="card-subtitle3 mb-2 text-muted" id="theme">Bemutatkozás</h6>
+                    </div>
+                </div>
+                <div class="indexButtons">
+                    <button type="button" class="btn btn-light" style="width: 237px;" onclick="getPreviousCard()">
+                    <b>Előző kártya</b>
+                    </button>
+                    <button type="button" class="btn btn-light" style="width: 237px;" onclick="getNextCard()">
+                    <b>Következő kártya</b>
+                    </button>
+                </div>        
             </div>
-            <div class="col-2"></div>
+            <div class="col-3">
+                <img class="index-img" src="./lib/images/kartya2.jpg" alt="card" width="200" height="200">
+            </div>
         </div>
     </div>
 
-    <script src="JS/main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 
 </html>
