--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div class="card" style="width: 30rem;">
                     <div id="cardBody" class="card-body">
                         <h6 id="card-id">1</h6>
-                        <h4 id="cardTitle" class="card-title">Good Night!</h4>
+                        <h4 id="cardTitle" class="card-title">Good morning!</h4>
                         <h6 id="subtitle1" class="card-subtitle mb-2 text-muted">Angol</h6>
-                        <h4 id="cardTitle2" class="card-title2">Jó éjszakát!</h4>
+                        <h4 id="cardTitle2" class="card-title2">Jó reggelt!</h4>
                         <h6 id="subtitle2" class="card-subtitle2 mb-2 text-muted">Magyar</h6>
                         <h6 class="card-subtitle3 mb-2 text-muted" id="theme">Bemutatkozás</h6>
                     </div>
