index.html has been changed.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h6>A nyelvtanuló kártyákkal gyorsan és könnyedén lehet tanulni különböző nyelveket, saját, egyéni tempóban haladva.</h6>                   
                 </div>
@@ -67,7 +67,7 @@
                     <h6>A kártyák segítségével könnyebbé és egyszerűbbé válik a nyelvtanulás, ugyanis a kártyák lapozgatásával, egyesével tudjuk memorizálni és begyakorolni a szavakat, kifejezéseket.</h6>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <div class="index-title">
                     <h3>Nyelvtanuló kártyák</h3>
                 </div>
@@ -89,7 +89,7 @@
                     </button>
                 </div>        
             </div>
-            <div class="col-3">
+            <div class="col-sm-3">
                 <img class="index-img" src="./lib/images/kartya2.jpg" alt="card" width="200" height="200">
             </div>
         </div>
