Files has been modified.

--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent">
@@ -58,7 +58,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h6>Ezen az oldalon új szavakat, vagy kifejezéseket lehet felvenni, amelyek majd megjelennek a kártyákon.</h6>
                 </div>
@@ -66,7 +66,7 @@
                     <h6>Az adatok kitöltése után a mentés gombra kattintva rögzíti azokat a rendszer.</h6>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <hr>
                 <fieldset>
                     <legend class="cardData">
@@ -133,7 +133,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-3"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
     <script src="./JS/main.js"></script>
