--- a/eredmeny-teszt1.html
+++ b/eredmeny-teszt1.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent">
@@ -56,13 +56,13 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h5>Az első teszt helyes megoldásai.</h5>         
                 </div>
                 <div class="title2"></div>           
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <fieldset class="test">
                     <legend class="test-legend"><h4>Teszt 1</h4></legend>
                     <span></span>
@@ -118,7 +118,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-3"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 </body>
