--- a/listak.html
+++ b/listak.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent">
@@ -60,7 +60,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-sm-6">
                 <div class="title1">
                     <h6>Ezen az oldalon lehetőség van listázni az eddig megtanult szavakat, kifejezéseket.</h6>
                 </div>
@@ -68,8 +68,8 @@
                     <h6>A listát pedig le is lehet tölteni pdf formátumban, amennyiben szükség van rá.</h6>
                 </div>                             
             </div>
-            <div class="col-4"></div>
-            <div class="col-2">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-2">
                 <div>
                     <button id="listBtn" class="btn btn-block btn-light" onclick="getCards()">
                         Kártya lista
@@ -82,7 +82,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="col">
+        <div class="col-sm">
             <table id="cardsTable" class="table table-striped">
                 <thead>
                     <tr>
