--- a/hozzaadas.html
+++ b/hozzaadas.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-sm-6">
                 <hr>
-                <fieldset>
+                <fieldset class="form-horizontal">
                     <legend class="cardData">
                         <h3>Kártya adatok</h3>
                     </legend>
