Files has been modified

--- a/eredmeny-teszt1.html
+++ b/eredmeny-teszt1.html
@@ -110,7 +110,7 @@
                 </fieldset>
                 
                 <div>
-                    <button type="button" class="btn btn-light" id="backBtn">
+                    <button type="button" class="btn btn-light">
                         <a href="./index.html"><b>Vissza a főoldalra</b></a>
                     </button>
                     <button type="submit" class="btn btn-light">
