--- a/nyelvek.html
+++ b/nyelvek.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h6>Ezeken a nyelveken lehet gyakorolni a kártyákkal.</h6>
                 </div>
@@ -67,7 +67,7 @@
                     <h6>A kártyák -> hozzáadás menüpontban az adatok megadásánál lehet kiválasztani a kívánt nyelvet.</h6>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <ul class="list-group" id="lang-list">
                     <li class="list-group-item">Angol</li>
                     <li class="list-group-item">Német</li>
@@ -79,7 +79,7 @@
                     <li class="list-group-item">Orosz</li>
                 </ul>
             </div>
-            <div class="col-3"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 </body>
