--- a/listak.html
+++ b/listak.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent">
@@ -82,16 +82,16 @@
         </div>
     </div>
     <div class="container">
-        <div class="col-sm">
+        <div class="table-responsive-sm">
             <table id="cardsTable" class="table table-striped">
                 <thead>
                     <tr>
-                        <th style="width: 4rem;">#</th>
-                        <th>Megnevezés</th>
-                        <th style="width: 7rem;">Nyelv</th>
-                        <th>Megnevezés</th>
-                        <th style="width: 7rem;">Nyelv</th>
-                        <th style="width: 10rem;">Témakör</th>
+                        <th scope="col">#</th>
+                        <th scope="col">Megnevezés</th>
+                        <th scope="col">Nyelv</th>
+                        <th scope="col">Megnevezés</th>
+                        <th scope="col">Nyelv</th>
+                        <th scope="col">Témakör</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
