--- a/temakorok.html
+++ b/temakorok.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h6>A témák kiválasztásához segítséget nyújthatnak ezek a kis leírások.</h6>
                 </div>
@@ -67,8 +67,8 @@
                     <h6>A kártyák -> hozzáadás menüpontban az adatok megadásánál lehet kiválasztani a kívánt témakört.</h6>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="list-group" id="theme-list">
+            <div class="col-sm-6">
+                <div class="list-group">
                     <a class="list-group-item">
                         <div class="d-flex w-100 justify-content-between">
                             <h4 class="mb-1">Bemutatkozás</h4>
@@ -157,10 +157,8 @@
                       });
                     });
                 </script>
-
-
             </div>
-            <div class="col-3"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 </body>
