--- a/teszt3.html
+++ b/teszt3.html
@@ -56,7 +56,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-3">
+            <div class="col-sm-3">
                 <div class="title1">
                     <h5>Online ingyenes szintfelmérő tesztek</h5>         
                 </div>
@@ -64,7 +64,7 @@
                     <h6>Ingyenes és gyorsan, egyszerűen felmérhetjük velük a tudásunkat.</h6>
                 </div>           
             </div>
-            <div class="col-6">
+            <div class="col-sm-6">
                 <ul class="nav justify-content-center" id="test-nav">
                     <li class="nav-item">
                       <a class="nav-link" id="nav1" href="./teszt1.html">Teszt 1</a>
@@ -291,7 +291,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-3"></div>
+            <div class="col-sm-3"></div>
         </div>
     </div>
 </body>
